[package]
name = "cryptowatch"
description = "Cryptowatch Rust SDK"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.61"
futures = "0.3.25"
prost = "0.11.5"
prost-types = "0.11.5"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
prost-build = "0.11.5"
